--- a/style.css
+++ b/style.css
@@ -1,23 +1,38 @@
-body{
+body {
+    
     background-color: bisque;
     display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
 }
-.container{
-    box-sizing: border-box;
+
+.container {
     display: flex;
-    flex-wrap: wrap;
-    height: 600px;
-    width: 600px;
-    border: 4px solid orange
+    flex-flow: column wrap;
+    align-content: baseline;
+    border: 4px solid orange;
+    max-width: 640px;
+    min-height: 640px;
+    max-height: 640px;
+    min-width: 640px;
 }
+
 .grid-square {
+    box-sizing: border-box; 
     border: 1px solid black;
-    
+    margin: 0px;
+    padding: 0;
+  
 }
+
 .black-hover {
     background-color: black;
 }
-.grid{
+
+.grid {
     width: 120px;
     height: 80px;
 }
